@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1040 2009/09/30 12:53:13 martin Exp $
+# $Id: CHANGES,v 1.1041 2009/10/02 13:15:37 sb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.5.0 beta1 (????/??/??)
+ - (2009/30/02) Fixed bug#4379 - Array parameters not working in mkStats.pl
  - (2009/09/23) Added virtual file system object for global file storage as
     Kernel::System::VirtualFS with FS and DB backends.
     Notice: Use scripts/DBUpdate-to-2.5.*.sql for upgrading!
@@ -31,6 +32,7 @@
  - (2009/09/15) Improved performance of the PDF backend.
 
 2.4.5 (2009/??/??)
+ - (2009/30/02) Fixed bug#4379 - Array parameters not working in mkStats.pl
  - (2009/09/30) Fixed bug#4348 - Dashboard: Upcoming Events Caching on a
     per-user basis.
  - (2009/09/30) Fixed bug#4338 - Enhancement: Be able to disable customer
